--- a/web/src/main/resources/templates/fragments/footer.html
+++ b/web/src/main/resources/templates/fragments/footer.html
@@ -3,8 +3,12 @@
 
 <body>
 
-<footer class="footer" th:fragment="footer">
-    <p>BMP to openEHR Konverter</p>
+<footer class="footer bg-light text-center text-lg-start" th:fragment="footer">
+    <div class="container">
+        <div class="text-center text-muted p-3">
+            BMP to openEHR Konverter © 2024 Tinia
+        </div>
+    </div>
 </footer>
 
 </body>
