--- a/web/src/main/resources/templates/upload.html
+++ b/web/src/main/resources/templates/upload.html
@@ -7,19 +7,23 @@
 
 <div layout:fragment="content">
     <div th:if="${output == null}">
-        <h1>Upload File</h1>
-        <form action="#" enctype="multipart/form-data" method="post" th:action="@{/upload}">
-            <div>
+        <h1><i class="fas fa-upload"></i> Upload File</h1>
+        <form action="#" class="mt-4" enctype="multipart/form-data" method="post" th:action="@{/upload}">
+            <div class="form-group">
                 <label class="form-label" for="fileInput">Select PDF file</label>
-                <input class="form-control form-control-lg" id="fileInput" name="fileInput" type="file">
+                <input accept="application/pdf" class="form-control form-control-lg" id="fileInput" name="fileInput"
+                       onchange="previewFile()" type="file">
             </div>
             <div class="form-check">
                 <input class="form-check-input" id="consentCheck" name="consentCheck" required
                        type="checkbox">
                 <label class="form-check-label" for="consentCheck">Ich stimme dem Verarbeiten der Daten zu.</label>
             </div>
-            <button class="btn btn-primary" type="submit">Upload</button>
+            <button class="btn btn-primary mt-3" type="submit">Upload</button>
         </form>
+    </div>
+    <div class="d-none ratio ratio-16x9" id="previewContainer">
+        <embed id="filePreview" type="application/pdf">
     </div>
     <div th:if="${output != null}">
         <h1>Converted File</h1>
@@ -28,6 +32,7 @@
             <label for="myTextArea">Converted Text</label>
         </div>
     </div>
+    <script th:src="@{/js/preview.js}"></script>
 </div>
 </body>
 </html>
